--- a/src/main.css
+++ b/src/main.css
@@ -117,6 +117,9 @@ body {
   background-color: #b8bbb5;
   box-shadow: inset 0 0 5px 5px rgb(207, 207, 207);
 }
+.flag {
+  color: #2E3436;
+}
 .cell:active {
   box-shadow: inset 0 0 2px 0 #000;
 }
@@ -135,7 +138,7 @@ body {
   padding: 15px 20px;
   background-color: transparent;
   border: 1px solid #CECECE;
-  color: rgb(126, 124, 124);
+  color: rgb(80, 80, 80);
   border-radius: 4px;
   width: 100%;
   margin-top: 3px;
